// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataPickerHeader renders with color 1`] = `
<div
  className="ax-panel ax-panel--inactive ax-theme--light"
  style={
    Object {
      "minHeight": undefined,
    }
  }
>
  <div
    className="ax-panel__header ax-cloak__container"
  >
    <div
      className="ax-data-picker__header"
    >
      <div
        className="ax-grid__container ax-space--x6"
      >
        <div
          className="ax-grid ax-grid--gutters-horizontal--tiny ax-grid--gutters-vertical--tiny ax-grid--vertical-middle"
        >
          <div
            className="ax-grid__cell ax-grid__cell--shrink"
            style={
              Object {
                "width": undefined,
              }
            }
          >
            <div
              className="ax-color-picker__option ax-color-picker__option--giant-leap"
              onClick={[Function]}
              style={
                Object {
                  "height": ".75rem",
                  "width": ".75rem",
                }
              }
            />
          </div>
          <div
            className="ax-grid__cell"
            style={
              Object {
                "width": undefined,
              }
            }
          >
            <h4
              className="ax-space--x2 ax-text--size-headtitle"
            >
              Placeholder
            </h4>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DataPickerHeader renders with defaultProps 1`] = `
<div
  className="ax-panel ax-panel--inactive ax-theme--light"
  style={
    Object {
      "minHeight": undefined,
    }
  }
>
  <div
    className="ax-panel__header ax-cloak__container"
  >
    <div
      className="ax-data-picker__header"
    >
      <div
        className="ax-grid__container ax-space--x6"
      >
        <div
          className="ax-grid ax-grid--gutters-horizontal--tiny ax-grid--gutters-vertical--tiny ax-grid--vertical-middle"
        >
          <div
            className="ax-grid__cell ax-grid__cell--shrink"
            style={
              Object {
                "width": undefined,
              }
            }
          >
            <div
              className="ax-color-picker__option ax-color-picker__option--empty"
              onClick={[Function]}
              style={
                Object {
                  "height": ".75rem",
                  "width": ".75rem",
                }
              }
            />
          </div>
          <div
            className="ax-grid__cell"
            style={
              Object {
                "width": undefined,
              }
            }
          >
            <h4
              className="ax-space--x2 ax-text--size-headtitle"
            >
              Placeholder
            </h4>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DataPickerHeader renders with onClear 1`] = `
<div
  className="ax-panel ax-panel--inactive ax-theme--light"
  style={
    Object {
      "minHeight": undefined,
    }
  }
>
  <div
    className="ax-panel__header ax-cloak__container"
  >
    <div
      className="ax-data-picker__header"
    >
      <div
        className="ax-grid__container ax-space--x6"
      >
        <div
          className="ax-grid ax-grid--gutters-horizontal--tiny ax-grid--gutters-vertical--tiny ax-grid--vertical-middle"
        >
          <div
            className="ax-grid__cell ax-grid__cell--shrink"
            style={
              Object {
                "width": undefined,
              }
            }
          >
            <div
              className="ax-color-picker__option ax-color-picker__option--empty"
              onClick={[Function]}
              style={
                Object {
                  "height": ".75rem",
                  "width": ".75rem",
                }
              }
            />
          </div>
          <div
            className="ax-grid__cell"
            style={
              Object {
                "width": undefined,
              }
            }
          >
            <h4
              className="ax-space--x2 ax-text--size-headtitle"
            >
              Placeholder
            </h4>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DataPickerHeader renders with value 1`] = `
<div
  className="ax-panel ax-theme--light"
  style={
    Object {
      "minHeight": undefined,
    }
  }
>
  <div
    className="ax-panel__header ax-cloak__container"
  >
    <div
      className="ax-data-picker__header"
    >
      <div
        className="ax-grid__container ax-space--x6"
      >
        <div
          className="ax-grid ax-grid--gutters-horizontal--tiny ax-grid--gutters-vertical--tiny ax-grid--vertical-middle"
        >
          <div
            className="ax-grid__cell ax-grid__cell--shrink"
            style={
              Object {
                "width": undefined,
              }
            }
          >
            <div
              className="ax-color-picker__option ax-color-picker__option--empty"
              onClick={[Function]}
              style={
                Object {
                  "height": ".75rem",
                  "width": ".75rem",
                }
              }
            />
          </div>
          <div
            className="ax-grid__cell"
            style={
              Object {
                "width": undefined,
              }
            }
          >
            <h4
              className="ax-space--x2 ax-text--size-headtitle"
            >
              Value
            </h4>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
